# dsa-rs

./: .gitignore  Cargo.toml  findings.md  justfile
algorithms/: Cargo.toml
algorithms/src/: lib.rs
algorithms/src/search/: binarysearch.rs
algorithms/src/sort/: insertionsort.rs  mod.rs  quicksort.rs  selectionsort.rs
dstructures/: Cargo.toml
dstructures/src/: lib.rs
dstructures/src/list/: linkedlist.rs
structures/: Cargo.toml
structures/src/: lib.rs  linkedlist.rs  queue.rs  stack.rs
tests/: Cargo.toml  lib.rs
tests/structures/: basics.rs  linkedlist.rs  mod.rs  queue.rs  stack.rs
