[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = { version = "0.5" }
rand = { version = "0.8.5" }


[[bench]]
name = "sort_benchs"
harness = false
